log
g++ -w -Wall -std=c++11 `fltk-config --ldflags --use-images` -g BS_GUI/Graph.cpp BS_GUI/Window.cpp BS_GUI/GUI.cpp BS_GUI/Simple_window.cpp scratch.cpp -o scratch
scratch.cpp: In function ‘int main()’:
scratch.cpp:126:27: error: use of deleted function ‘Graph_lib::Rectangle::Rectangle(const Graph_lib::Rectangle&)’
  Arrow a1({200,200}, ne(r1),20,20);
                           ^
In file included from BS_GUI/GUI.h:29:0,
                 from BS_GUI/Simple_window.h:10,
                 from scratch.cpp:7:
BS_GUI/Graph.h:256:8: note: ‘Graph_lib::Rectangle::Rectangle(const Graph_lib::Rectangle&)’ is implicitly deleted because the default definition would be ill-formed:
 struct Rectangle : Shape {
        ^
BS_GUI/Graph.h:256:8: error: use of deleted function ‘Graph_lib::Shape::Shape(const Graph_lib::Shape&)’
In file included from BS_GUI/GUI.h:29:0,
                 from BS_GUI/Simple_window.h:10,
                 from scratch.cpp:7:
BS_GUI/Graph.h:210:2: error: declared here
  Shape(const Shape&) = delete;
  ^
In file included from BS_GUI/GUI.h:29:0,
                 from BS_GUI/Simple_window.h:10,
                 from scratch.cpp:7:
BS_GUI/Graph.h:254:7: error:   initializing argument 1 of ‘Graph_lib::Point Graph_lib::ne(Graph_lib::Rectangle)’
 Point ne(struct Rectangle r);
       ^
scratch.cpp:130:21: error: statement cannot resolve address of overloaded function
  win.wait_for_button;
                     ^
make: *** [scratch] Error 1
